@@ -1065,6 +1065,7 @@ PyEval_EvalFrameEx(PyFrameObject *f, int throwflag)
     f->f_execute = slp_eval_frame_noval;
     return slp_eval_frame_value(f, throwflag, retval);
 exit_eval_frame:
+    Py_XDECREF(retval);
     Py_LeaveRecursiveCall();
     tstate->frame = f->f_back;
     return NULL;
